--- a/core/assets/bundles/bundle_sl.properties
+++ b/core/assets/bundles/bundle_sl.properties
@@ -973,14 +973,14 @@ liquid.water.name = Voda
 liquid.slag.name = Slag
 liquid.oil.name = Nafta
 liquid.cryofluid.name = Kriotečnost
-
+#should keep their meaning, only change when appropriate translation to said meaning exists
 unit.dagger.name = Bodež
-unit.mace.name = Mace
+unit.mace.name = Buzdovan
 unit.fortress.name = Tvrđava
 unit.nova.name = Nova
 unit.pulsar.name = Pulsar
 unit.quasar.name = Kvazar
-unit.crawler.name = Crawler
+unit.crawler.name = Puzač
 unit.atrax.name = Atrax
 unit.spiroct.name = Spiroct
 unit.arkyid.name = Arkyid
@@ -1003,7 +1003,7 @@ unit.omura.name = Omura
 unit.alpha.name = Alfa
 unit.beta.name = Beta
 unit.gamma.name = Gama
-unit.scepter.name = Scepter
+unit.scepter.name = Skepter
 unit.reign.name = Vlast
 unit.vela.name = Vela
 unit.corvus.name = Corvus
